--- a/Assets/css/responsive.css
+++ b/Assets/css/responsive.css
@@ -73,6 +73,11 @@ and (max-width: 1249px) {
 
 }
 
+body { padding-top: 40px; }
+@media screen and (max-width: 768px) {
+    body { padding-top: 0px; }
+}
+
 @media only screen and (max-width: 425px) {
 	#main-nav .container {
 		padding: 0 10px;
